# itzi

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  tests.yml
benchmarks/: benchmark_snippets.py  benchmark_solve_q.py  benchmark_update_h.py  snippets.pyx
docs/: cli.rst  conf.py  prog_manual.rst
src/itzi/: __init__.py  bmi_itzi.py  cli_parser.py  cloud.py  configreader.py  const.py  data_containers.py  grass_session.py  hydrology.py  infiltration.py  itzi.py  messenger.py  parser.py  rasterdomain.py  report.py  simulation.py  surfaceflow.py
src/itzi/cloud/: auth.py  cli.py  grass_utils.py  metadata_storage.py  models.py  pull.py  push.py  schemas.py  status.py  urls.py
src/itzi/compute/: hydrology.pyx  partial_inertia_h.pyx  partial_inertia_q.pyx
src/itzi/providers/: base.py  grass_input.py  grass_interface.py  grass_output.py
tests/: conftest.py  test_grass_session.py
tests/cli/: test_cli.py  test_configreader.py
tests/cloud/: test_cloud_cli.py  test_cloud_parser.py  test_cloud_push.py  test_cloud_roundtrip.py  test_cloud_status.py
tests/core/: test_flow.py  test_rastermetrics.py
tests/core/ea8b/: conftest.py  helpers.py  test_hotstart.py  test_scenario.py
tests/grass/: test_bmi.py  test_itzi.py  test_temporal_overwrite.py  test_tutorial.py
