[project]
name = "itzi"
version = "26.7"
description = "A distributed dynamic flood model."
authors = [
    {name = "Laurent Courty", email = "lrntct@gmail.com"},
]
dependencies = [
    "numpy>=2.5",
    "bmipy>=2.0.1",
    "itzi-core>=0.2.0",
]
requires-python = ">=3.12,<3.14"  # 3.12 for typing. pyswmm does not support python > 3.13
readme = "README.md"
license = "GPL-2.0-or-later"
keywords = ["science", "engineering", "hydrology", "flood"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Hydrology",
]

[project.urls]
Homepage = "https://www.itzi.org"
Documentation = "https://itzi.readthedocs.io"
Repository = "https://github.com/ItziModel/itzi"
Issues = "https://github.com/ItziModel/itzi/issues/"

[project.scripts]
itzi = "itzi.itzi:main"

[dependency-groups]
dev = [
    "pytest>=9.1",
    "pytest-cov==6.*",
    "pytest-forked==1.*",
    "pandas>=3.0.3",
    "requests>=2.34",
    "pytest-benchmark[histogram]==5.*",
    "scipy>=1.18",
    "pre-commit>=4.6",
    "ruff>=0.15",
    "ty>=0.0.55",
    "pyinstrument>=5.1",
    "rioxarray>=0.22.0",
    "sphinx>=9.1.0",
    "sphinx-argparse>=0.5.2",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pyx"]
"itzi.data" = ["*.ini"]
"itzi.data.colortable" = ["*.txt"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = ["--import-mode=importlib", "--benchmark-min-rounds=7"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cloud: marks tests using cloud functions (deselect with '-m \"not cloud\"')",
]

[tool.ruff]
line-length = 99

[tool.ty.rules]
# GRASS imports are resolved at runtime
unresolved-import = "ignore"
